[update] : Added arguments

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -34,7 +34,7 @@ PROFILE_NAME_FORMAT="HostName-IP-CountryShort"
 
 # VPN method to use (Support: OPENVPN, L2TP)
 VPN_TYPE="OPENVPN"
-VPN_TYPE="L2TP"
+#VPN_TYPE="L2TP"
 
 # VPN authentication
 USERNAME="vpn"
