[update] : Added server list filter

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -39,3 +39,7 @@ VPN_TYPE="OPENVPN"
 # VPN authentication
 USERNAME="vpn"
 PASSWORD="vpn"
+
+# Show only specific countries
+# Multiple specifications can be specified with commas
+TargetCountryShort=""
