[update] : Supports regular expression server filters

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -40,6 +40,16 @@ VPN_TYPE="OPENVPN"
 USERNAME="vpn"
 PASSWORD="vpn"
 
-# Show only specific countries
+# Server filter
 # Multiple specifications can be specified with commas
-TargetCountryShort=""
+# All variables starting with Target are interpreted as filters.
+# Only servers that match the filter value are displayed.
+# The filter can be an exact string match or a regular expression.
+# Example: TargetCountryShort="US,JP" -> Show the server which CountryShort is "US" or "JP"
+#          TargetHostName="foo"       -> Show the server which HostName is "foo"
+#          TargetIP="^1"              -> Show the server which IP starts from 1
+#          TargetPing="^[1-9]$"       -> Show the server which Ping is 1~9
+#TargetCountryShort=""
+#TargetHostName=""
+#TargetIP=""
+#TargetPing=""
