[update] : Added --nocache

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -40,6 +40,9 @@ VPN_TYPE="OPENVPN"
 USERNAME="vpn"
 PASSWORD="vpn"
 
+# Cache status (Set false to not use cached server list)
+USE_CACHE=true
+
 # Server filter
 # Multiple specifications can be specified with commas
 # All variables starting with Target are interpreted as filters.
