[update] : Prepare for automode

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -43,6 +43,9 @@ PASSWORD="vpn"
 # Cache status (Set false to not use cached server list)
 USE_CACHE=true
 
+# Auto connection
+AUTO_SETUP=true
+
 # Server filter
 # Multiple specifications can be specified with commas
 # All variables starting with Target are interpreted as filters.
