[update] : Added auto mode

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -44,7 +44,7 @@ PASSWORD="vpn"
 USE_CACHE=true
 
 # Auto connection
-AUTO_SETUP=true
+#AUTO_SETUP=true
 
 # Server filter
 # Multiple specifications can be specified with commas
