[update] : Added comments

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -13,6 +13,7 @@
 APP_NAME="VPNGate Client"
 
 # VPN Gate API
+# The script sends a GET request to this URL with curl and gets it as CSV.
 VPNGATE_CSV="http://www.vpngate.net/api/iphone/"
 
 # Cache file path (Save server list)
@@ -22,21 +23,30 @@ CACHE_PATH="/tmp/${UID}-nm-vpngate"
 CONFIG_DIR="${HOME}/.nm-vpngate"
 
 # A string that describes the CSV value (used in the array name) 
+# Change it only if the API specifications change.
+# The value in this part affects many parts such as filters and array names.
 CSV_VARS="HostName,IP,Score,Ping,Speed,CountryLong,CountryShort,NumVpnSessions,Uptime,TotalUsers,TotalTraffic,LogType,Operator,Message,OpenVPN_ConfigData_Base64"
 
-# Mode 
-#MODE="GUI"
-MODE="CLI"
+# Mode
+# This is the operation when no argument is specified.
+# This value is overridden by the argument.
+#MODE=GUI
+#MODE=AUTO
+MODE=CLI
 
 # Configuration name template saved in Network Manager
 # The CSV_VARS value will be replaced with the setting value.
+# We strongly recommend that you do not set values that are likely to change, such as the Ping value.
 PROFILE_NAME_FORMAT="HostName-IP-CountryShort"
 
 # VPN method to use (Support: OPENVPN, L2TP)
+# L2TP support is BETA and its function is unstable.
 VPN_TYPE="OPENVPN"
 #VPN_TYPE="L2TP"
 
 # VPN authentication
+# VPN Gate tells the server to use both a username and password as a "vpn".
+# Change this value only if you are connecting to a server that is ignoring this instruction.
 USERNAME="vpn"
 PASSWORD="vpn"
 
