[update] : Added advanced settings for automatic connection

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -53,6 +53,19 @@ PASSWORD="vpn"
 # Cache status (Set false to not use cached server list)
 USE_CACHE=true
 
+# AUTO MODE Config
+# AUTO_TARGET specifies the value to be compared at the time of auto.
+# Specify a value for CSV_VARS.Please enter only a number.
+# If it is a character string, it will not work properly.
+# AUTO_COND is the server condition selected when auto.
+# Only MIN or MAX can be set
+# Example: AUTO_TARGET="Ping"       AUTO_COND="MIN" -> Select the server with the lowest ping
+#          AUTO_TARGET="Score"      AUTO_COND="MAX" -> Select the server with the highest score
+#          AUTO_TARGET="TotalUsers" AUTO_COND="MIN" -> Select the server with the fewest number of people
+
+AUTO_TARGET="Score" AUTO_COND="MAX"
+
+
 # Server filter
 # Multiple specifications can be specified with commas
 # All variables starting with Target are interpreted as filters.
