--- a/PKGBUILD/nm-vpngate-git/PKGBUILD
+++ b/PKGBUILD/nm-vpngate-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 _pkgname="nm-vpngate"
 pkgname="${_pkgname}-git"
-pkgver=0.1
+pkgver=r35.6715ade
 pkgrel=1
 pkgdesc="A script that makes it easy to connect Network Manager to a VPN Gate"
 arch=('any')
