[update] : Added example of auto config

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -63,7 +63,9 @@ USE_CACHE=true
 #          AUTO_TARGET="Score"      AUTO_COND="MAX" -> Select the server with the highest score
 #          AUTO_TARGET="TotalUsers" AUTO_COND="MIN" -> Select the server with the fewest number of people
 
-AUTO_TARGET="Score" AUTO_COND="MAX"
+AUTO_TARGET="Ping"       AUTO_COND="MIN"
+#AUTO_TARGET="Score"      AUTO_COND="MAX"
+#AUTO_TARGET="TotalUsers" AUTO_COND="MIN"
 
 
 # Server filter
