[update] : Added auto limit

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -53,6 +53,10 @@ PASSWORD="vpn"
 # Cache status (Set false to not use cached server list)
 USE_CACHE=true
 
+# Limit the number of automatic connection attempts
+# Set the value to 0 to not limit
+AUTO_LIMIT=0
+
 # AUTO MODE Config
 # AUTO_TARGET specifies the value to be compared at the time of auto.
 # Specify a value for CSV_VARS.Please enter only a number.
