[update] : Added REMOVE_PROFILE

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -53,6 +53,9 @@ PASSWORD="vpn"
 # Cache status (Set false to not use cached server list)
 USE_CACHE=true
 
+# When the connection fails, remove the profile if it was added by this script.
+REMOVE_PROFILE=false
+
 # Limit the number of automatic connection attempts
 # Set the value to 0 to not limit
 AUTO_LIMIT=0
