[update] : Added --stop

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -16,8 +16,9 @@ APP_NAME="VPNGate Client"
 # The script sends a GET request to this URL with curl and gets it as CSV.
 VPNGATE_CSV="http://www.vpngate.net/api/iphone/"
 
-# Cache file path (Save server list)
-CACHE_PATH="/tmp/${UID}-nm-vpngate"
+# Cache config
+CACHE_DIR="/tmp/nm-vpngate.${UID}"
+CACHE_PATH="${CACHE_DIR}/servers"
 
 # Directory to save VPN config file
 CONFIG_DIR="${HOME}/.nm-vpngate"
