--- a/PKGBUILD/nm-vpngate-git/PKGBUILD
+++ b/PKGBUILD/nm-vpngate-git/PKGBUILD
@@ -24,5 +24,5 @@ pkgver() {
 
 package() {
     cd "${srcdir}/${_pkgname}"
-    make DESTDIR="${pkgdir}/usr/" install
+    make DESTDIR="${pkgdir}" install
 }
