[update] : Check server cache

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -54,6 +54,12 @@ PASSWORD="vpn"
 # Cache status (Set false to not use cached server list)
 USE_CACHE=true
 
+# Time to keep cache (seconds)
+# 1h = 3600s
+# 12h = 3600 * 12 = 43200s
+# 24h = 3600 * 24 = 86400s
+KEEP_CACHE="43200"
+
 # When the connection fails, remove the profile if it was added by this script.
 REMOVE_PROFILE=false
 
