--- a/PKGBUILD/nm-vpngate-git/PKGBUILD
+++ b/PKGBUILD/nm-vpngate-git/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="A script that makes it easy to connect Network Manager to a VPN Gate"
 arch=('any')
 url="https://github.com/Hayao0819/nm-vpngate"
 license=('WTFPL')
-depends=("networkmanager" "networkmanager-openvpn" "networkmanager-strongswan" "zenity")
+depends=("networkmanager" "networkmanager-openvpn" "networkmanager-strongswan" "zenity" "networkmanager-l2tp")
 makedepends=('git')
 source=("git+${url}.git")
 md5sums=('SKIP')
