[update] : More flexibility for DNS configuration

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -23,6 +23,9 @@ CACHE_PATH="${CACHE_DIR}/servers"
 # Directory to save VPN config file
 CONFIG_DIR="${HOME}/.nm-vpngate"
 
+# Path to DNS setup script
+DNS_SCRIPT="/etc/openvpn/update-resolv-conf"
+
 # A string that describes the CSV value (used in the array name) 
 # Change it only if the API specifications change.
 # The value in this part affects many parts such as filters and array names.
