[update] : Add FIX_OPENVPN_CONFIG

--- a/nm-vpngate.conf
+++ b/nm-vpngate.conf
@@ -95,3 +95,7 @@ AUTO_TARGET="Score"      AUTO_COND="MAX"
 #TargetHostName=""
 #TargetIP=""
 #TargetPing=""
+
+# The list of patch for the ovpn file
+# Currently, cipher is the only supported item
+FIX_OPENVPN_CONFIG=("cipher")
